# MedGemma

./: .env.example  .gitignore  AGENTS.md  DEMO_SCRIPT.md  README.md  main.py  pyproject.toml  wipe_db.py
data/: README.md
docs/: ARCHITECTURE_FLOW.md  TECHNICAL_WRITEUP.md
notebooks/: medgemma_clinical_assistant.ipynb
scripts/: demo_test.py  download_sample_xray.py  test_healthcare_agent.py
src/: __init__.py
src/agent/: __init__.py  clinical_correlation.py  functiongemma_agent.py  healthcare_agent.py  medgemma_agent.py  tools.py  vllm_agent.py  vllm_manager.py
src/asr/: __init__.py  medasr_streaming.py
src/auth/: __init__.py  auth.py
src/clinical/: __init__.py  intelligence.py
src/compliance/: __init__.py  compliance.py
src/config/: firebase_config.py  image_storage.py
src/council/: __init__.py  council.py
src/ehr/: __init__.py  fhir_mock.py  firestore_server.py
src/history/: __init__.py  history.py
src/memory/: __init__.py  patient_memory.py
src/portal/: __init__.py  patient_portal.py
src/soap/: __init__.py  generator.py
static/: ai_portal.js  app.js  index.html  styles.css
templates/: ai_portal.html  compliance.html  council.html  history.html  patient_portal.html
tests/: conftest.py  test_api.py  test_auth.py  test_clinical_correlation.py  test_clinical_intelligence.py  test_compliance.py  test_council.py  test_fhir_ehr.py  test_healthcare_agent.py  test_patient_portal.py  test_soap_generator.py
